# Orbit

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  README.md
docs/: README.md  documentation-guide.md
issues/: GUIDE.md  README.md  compiler.md  ibuffer.md  ir.md  number.md  parser.md  sbuffer.md  scanner.md  utf8-stringbuilder.md  vm.md
issues/poc/: README.md  probe.h  run.sh
issues/poc/ibuffer/: ibuf-004.cpp  ibuf-006.cpp
issues/poc/ir/: phi-regalloc.orb
issues/poc/parser/: parse-001.orb
issues/poc/sbuffer/: sbuf-001.cpp
issues/poc/scanner/: scan-001.orb  scan-002.orb  scan-003.cpp  scan-004.orb  scan-005.orb  scan-006.orb  scan-007.orb  scan-010.cpp  scan-011.orb  scan-012.orb  scan-013.orb  scan-019.orb
issues/poc/vm/: trap-unwind-sp.orb
orbit/: CMakeLists.txt  datatype.h
orbit/liftoff/: README.md  codegen.cpp  codegen.h  compiler.cpp  compiler.h  exception.h  grammar.ebnf  olevel.h  optimizer.cpp  optimizer.h  symtable.cpp  symtable.h
orbit/liftoff/ir/: basicblock.h  builder.cpp  builder.h  instruction.h  intervalspiller.cpp  intervalspiller.h  irbuilder.cpp  irbuilder.h  ircontext.cpp  ircontext.h  jblock.cpp  jblock.h  linearscan.cpp  linearscan.h  module.h  object.h  register.h  value.h
orbit/liftoff/parser/: ast.h  astgen.py  context.h  parser.cpp  parser.h
orbit/liftoff/scanner/: ibuffer.cpp  ibuffer.h  sbuffer.cpp  sbuffer.h  scanner.cpp  scanner.h  token.h
orbit/orbiter/: config.cpp  config.h  context.cpp  defer.h  excstack.cpp  excstack.h  fiber.cpp  fiber.h  fpool.h  fqueue.cpp  fqueue.h  isolate.cpp  isolate.h  opcode.h  orbcall.cpp  orbcall.h  orbit.cpp  panic.cpp  panic.h  runtime.cpp  runtime.h  trycatch.h  vm.cpp  vm.h  vmstack.cpp  vmstack.h
orbit/orbiter/datatype/: atom.cpp  atom.h  bytes.cpp  bytes.h  chan.cpp  chan.h  closure.cpp  closure.h  code.cpp  code.h  context.cpp  context.h  ctbuilder.cpp  ctbuilder.h  decimal.cpp  decimal.h  dict.cpp  dict.h  error.cpp  error.h  errors.h  function.cpp  function.h  future.cpp  future.h  generator.cpp  generator.h  hashmap.h  iterator.cpp  iterator.h  list.cpp  list.h  module.cpp  module.h  nativefunc.cpp  nativefunc.h  number.cpp  number.h  obase.h  oobject.cpp  (+22 more)
orbit/orbiter/datatype/c3/: c3.cpp  c3.h
orbit/orbiter/datatype/support/: byteops.h  common.h  shared_buffer.cpp  shared_buffer.h  slice.cpp  slice.h
orbit/orbiter/import/: importer.cpp  importer.h  importspec.cpp  locator.cpp  locator.h  module_entry.cpp  module_entry.h  registry.cpp  registry.h
orbit/orbiter/memory/: bitoffset.h  gc.cpp  gc.h  iallocator.cpp  iallocator.h  memory.cpp  memory.h  refcount.cpp  refcount.h
orbit/orbiter/module/: builtin.cpp  io.cpp  modules.h  runtime.cpp
orbit/orbiter/native/: README.md  dlwrap.cpp  dlwrap.h  ffi.h  ffi_internal.h  loader.cpp  loader.h  native.h  prepare.cpp  ucall.cpp  w64call.cpp
orbit/orbiter/native/arch/arm64/: preload.S
orbit/orbiter/native/arch/x86_64/: preload.S
orbit/orbiter/support/: process.cpp  process.h
orbit/orbiter/support/nt/: nt.cpp  nt.h  windows.h
orbit/orbiter/sync/: asyncrwlock.cpp  asyncrwlock.h  monitor.cpp  monitor.h
orbit/util/: enum_bitmask.h  hash.h  hashmap.h  macros.h
ortest/: README.md  run.sh
ortest/calls/: 01_argument_passing.orb
ortest/oop/: 02_inheritance_resolution.orb  05_trait_c3_mro.orb
ortest/operators/: 01_is.orb  02_basic_ops.orb
ortest/regalloc/: 01_variables.orb  02_calls_discarded.orb  03_calls_nested.orb  04_crosscall_results.orb  05_pressure.orb
ortest/typehooks/: tostr_hooks.orb
stdlib/: README.md  error.orb  readline.orb  repl.orb  runtime.orb
stdlib/io/: file.orb  io.orb
stdlib/io/bufio/: reader.orb  writer.orb
stdlib/regex/: compile.orb  error.orb  flags.orb  match.orb  pattern.orb  regex.orb
test/: CMakeLists.txt
test/liftoff/: symtable.cpp
test/liftoff/scanner/: ibuffer.cpp  sbuffer.cpp  scanner.cpp
test/util/: hashmap.cpp
